tests/invalid/const_array_not_supported.wio
fn Entry(args: string[]) -> i32 {
    const values: i32[] = [1, 2, 3];
    return 0;
}
